Resolved merge conflicts

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
             <div class="footer-bottom">
                 <p>© Copyright 2025 Arha Media and Broadcasting Pvt Ltd. All rights reserved.</p>
                 <div class="powered-by">
-                    <p>Powered by <img src="quickplay-logo_scale_w_1400.jpg" alt="Quickplay"></p>
+                    <p>Powered by <img src="quickplay-logo_scale_w_1400 - Copy.png" alt="Quickplay"></p>
                 </div>
             </div>
         </footer>    
